--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vite-plugin-lazy-import",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Used for vite Lazy import js and style",
   "scripts": {
     "update": "npm install --legacy-peer-deps",
-    "build": "gulp build_lazy"
+    "lib": "gulp build_lazy"
   },
   "files": [
     "dist",
